--- a/requirements.txt
+++ b/requirements.txt
@@ -35,8 +35,7 @@ sqlparse==0.4.2
 urllib3==1.26.8
 Werkzeug==2.0.3
 WTForms==2.1
-apilytics
-pyshorteners
-twilio
-phonenumbers
-sendgrid
+apilytics==1.6.0
+twilio==7.8.0
+phonenumbers==8.12.45
+sendgrid==6.9.7
