--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,65 @@
+alembic==1.7.7
+apilytics==1.6.0
+asgiref==3.5.0
 bcrypt==3.1.4
 blinker==1.4
+Brotli==1.0.9
 cachelib==0.6.0
+certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.0.4
+ConfigArgParse==1.5.3
 cryptography==36.0.2
 Django==4.0.3
 Flask==2.0.3
+Flask-BasicAuth==0.2.0
 Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.10
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
+Flask-Migrate==3.1.0
 Flask-Session==0.4.0
 Flask-Share==0.1.1
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.14.2
+gevent==21.12.0
+geventhttpclient==1.5.3
 greenlet==1.1.2
 gunicorn==20.1.0
 idna==3.3
 image==1.5.33
 itsdangerous==2.1.0
 Jinja2==3.0.3
+locust==2.8.4
+Mako==1.2.0
 MarkupSafe==2.1.0
+msgpack==1.0.3
 mysql-connector-python==8.0.28
 mysql-connector-python-rf==2.2.2
+phonenumbers==8.12.45
 Pillow==9.0.1
 protobuf==3.19.4
+psutil==5.9.0
 pycparser==2.21
+PyJWT==2.3.0
 PyMySQL==1.0.2
+python-http-client==3.3.7
+pytz==2022.1
+pyzmq==22.3.0
 qrcode==7.3.1
 requests==2.27.1
+roundrobin==0.0.2
+sendgrid==6.9.7
 six==1.11.0
 SQLAlchemy==1.4.32
 sqlparse==0.4.2
+starkbank-ecdsa==2.0.3
+termcolor==1.1.0
+twilio==7.8.0
+typing_extensions==4.1.1
 urllib3==1.26.8
 Werkzeug==2.0.3
 WTForms==2.1
-apilytics==1.6.0
-twilio==7.8.0
-phonenumbers==8.12.45
-sendgrid==6.9.7
+zope.event==4.5.0
+zope.interface==5.4.0
