replaced all grapevine.works URL to franklyapp.nl

--- a/AWS/deploymentconfig.json
+++ b/AWS/deploymentconfig.json
@@ -1,4 +1,4 @@
-{"grapevine": {
-    "image": ":grapevine.grapevine.latest",
+{"franklyapp": {
+    "image": ":franklyapp.franklyapp.latest",
     "ports": {"80": "HTTP"}
   }}
