--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,10 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+      
+        # Runs a single command using the runners shell
+      - name: Downloading pyscript
+        run: pip install pyscript
 
       # Runs a single command using the runners shell
       - name: running the testscript
