--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,11 @@ jobs:
       - uses: actions/checkout@v3
       
         # Runs a single command using the runners shell
-      - name: Downloading pyscript
+      - name: Downloading pytest
         run: pip install pytest
+        
+      - name: installing dependancies
+        run: pip install -r requirements.txt
 
       # Runs a single command using the runners shell
       - name: running the testscript
