--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -50,6 +50,5 @@ jobs:
         run: aws s3 cp s3://franklyappsecret/Env_Settings.cfg .
 
 
-      # Runs a single command using the runners shell
-      - name: running the testscript
-        run: python pytest
+      - name: Running pytests
+        uses: cclauss/GitHub-Action-for-pytest@0.5.0
