--- a/.github/workflows/test_build_deploy.yml
+++ b/.github/workflows/test_build_deploy.yml
@@ -12,6 +12,7 @@ env:
   AWS_LIGHTSAIL_SERVICE_NAME: franklyapp
 jobs:
   testing:
+  name: Testing the code with Pytest
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -45,7 +46,7 @@ jobs:
 
   buildingimage:
     needs: testing
-    name: Build image and deploy to Lightsail
+    name: Build container image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -74,7 +75,7 @@ jobs:
         
       - name: Build Docker Image
         run: docker build -t franklyapp:latest .
-      - name: Push and Deploy
+      - name: Push image to container register
         run: |
           service_name=${{ env.AWS_LIGHTSAIL_SERVICE_NAME }}
           aws lightsail push-container-image \
@@ -85,7 +86,7 @@ jobs:
 
   deploy:
     needs: buildingimage
-    name: Deploy to lightsail
+    name: Deploy to lightsail [PRODUCTION]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -110,7 +111,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: Deploy to production
+      - name: Deploying app to production
         run: |
 
           aws lightsail create-container-service-deployment --service-name franklyapp \
