Deploying all todays changes

--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -118,33 +118,9 @@ jobs:
             --containers file://AWS/deploymentconfig.json \
             --public-endpoint file://AWS/publicendpoint.json
 
-      - name: Validating the app is live 1st attempt
-        run: |
-            if aws lightsail get-container-service-deployments --service-name franklyapp | head -n 1   | grep -q 'ACTIVE'; then
-              echo "app is live!"; else sleep 2m
-            fi
-
-      - name: Validating the app is live 2nd attempt
-        run: |
-              if aws lightsail get-container-service-deployments --service-name franklyapp | head -n 1   | grep -q 'ACTIVE'; then
-                echo "app is live!"; else sleep 2m
-              fi
-
-      - name: Validating the app is live 3rd attempt
-        run: |
-              if aws lightsail get-container-service-deployments --service-name franklyapp | head -n 1   | grep -q 'ACTIVE'; then
-                echo "app is live!"; else sleep 2m
-              fi
-
-      - name: Validating the app is live 4h attempt
-        run: |
-          if aws lightsail get-container-service-deployments --service-name franklyapp | head -n 1   | grep -q 'ACTIVE'; then
-            echo "app is live!"; else exit 1
-          fi
-
   Validation:
     needs: deploy
-    name: Checking if the app is live in AWS 
+    name: Is the app live? 
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
