--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -49,7 +49,7 @@ jobs:
       - name: setting up dependencies
         run: pip install -r requirements.txt
       - name: Starting development server 
-        run: python developmentserver.py
+        run: sudo python developmentserver.py
       - name: Starting development server 
         run: sleep 5s
       - name: Running playwright functional tests in a browser
