--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -1,9 +1,8 @@
 name: 🚀 Test and deploy
 # Only trigger, when the build workflow succeeded
-on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
-  push:
-    branches: [ "master" ]
+  release:
+    types:
+      - created
 
 env:
   AWS_REGION: eu-central-1
