adding purest to testsuite

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,6 +19,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Install AWS Client
+      run: |
+        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+        unzip awscliv2.zip
+        sudo ./aws/install || true
+        aws --version
+        curl "https://s3.us-west-2.amazonaws.com/lightsailctl/latest/linux-amd64/lightsailctl" -o "lightsailctl"
+        sudo mv "lightsailctl" "/usr/local/bin/lightsailctl"
+        sudo chmod +x /usr/local/bin/lightsailctl
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-region: ${{ env.AWS_REGION }}
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    - name: Getting the secrets for the app
+      run: aws s3 cp s3://franklyappsecret/Env_Settings.cfg .
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
@@ -27,7 +44,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt
+        
+        
+    - name: Test with pytest
+      run: |
+        python3 developmentserver.py
+        pytest
+    
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
