--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -44,8 +44,8 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies
       run: |
-        pip install flake8 pytest
-        pip install -r requirements.txt
+        pip3 install flake8 pytest
+        pip3 install -r requirements.txt
         
         
     - name: Test with pytest
