--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -50,7 +50,7 @@ jobs:
         
     - name: Test with pytest
       run: |
-        sudo python developmentserver.py
+        sudo python3 developmentserver.py
         pytest
     
     - name: Lint with flake8
