--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -49,7 +49,7 @@ jobs:
         
     - name: Test with pytest
       run: |
-        pip3 install -r requirements.txt 
+        python3 -m pip3 install -r requirements.txt
         sudo python3 developmentserver.py
         pytest
     
