--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -49,7 +49,7 @@ jobs:
         
     - name: Set up Python
       run: |
-        sudo apt-get -y install python3-pip
+        sudo apt install python3-pip
         pip3 --version
         python -m pip3 install -r requirements.txt
         sudo python3 developmentserver.py
