--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -20,6 +20,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: becoming superuser
+      run: sudo su
     - uses: actions/checkout@v3
     - name: Install AWS Client
       run: |
