--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -55,7 +55,7 @@ jobs:
         
     - name: Running the server for tests
       run: |
-          ls
+          aws s3 cp s3://franklyappsecret/Env_Settings.cfg .
           python3 developmentserver.py
     - name: Test with pytest
       run: |    
