--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -15,7 +15,7 @@ env:
   AWS_REGION: eu-central-1
   AWS_LIGHTSAIL_SERVICE_NAME: franklyapp
 jobs:
-  build:
+  RunServer:
 
     runs-on: ubuntu-latest
 
@@ -41,7 +41,12 @@ jobs:
         aws s3 cp s3://franklyappsecret/Env_Settings.cfg .
         ls
     
-    
+Runtests:
+  concurrency: tests
+  needs: RunServer
+  runs-on: ubuntu-latest
+
+    steps:
     - uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v3
@@ -61,10 +66,13 @@ jobs:
     - name: Test with pytest
       run: |    
            pytest
-    
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+  Linter:
+    concurrency: tests
+    needs: RunServer
+    runs-on: ubuntu-latest  
+      - name: Lint with flake8
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
