--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -36,12 +36,14 @@ jobs:
         aws-region: ${{ env.AWS_REGION }}
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    - name: Getting the secrets for the app
-      run: |
-        aws s3 cp s3://franklyappsecret/Env_Settings.cfg .
-        ls
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.x'
     - name: Running the server for tests
       run: |
+          pip install -r requirements.txt
           aws s3 cp s3://franklyappsecret/Env_Settings.cfg .
           python3 developmentserver.py
     
