--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -71,7 +71,7 @@ jobs:
             pytest
   Linter:
     concurrency: tests
-    needs: RunServer
+    needs: tests
     runs-on: ubuntu-latest
     steps:  
       - name: Lint with flake8
