--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -63,7 +63,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest              
+        pip install --upgrade pip
+        pip install playwright
+        playwright install
+        pip install flake8 pytest               
 
     
     - name: Test with pytest
