Removed server deployment test 8

--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -45,21 +45,7 @@ jobs:
       run: |
           pip install -r requirements.txt
           aws s3 cp s3://franklyappsecret/Env_Settings.cfg .
-          python3 developmentserver.py
-    
-  tests:
-    concurrency: tests
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Sleep for 30 seconds
-      run: sleep 4m
-      shell: bash
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.x'
+  # python3 developmentserver.py
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -68,18 +54,12 @@ jobs:
         playwright install
         pip install flake8 pytest               
 
-    
     - name: Test with pytest
       run: |    
             pytest
-  Linter:
-    concurrency: tests
-    needs: tests
-    runs-on: ubuntu-latest
-    steps:  
-      - name: Lint with flake8
-        run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
