adding requirement for openCV2

--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -15,7 +15,7 @@ env:
   AWS_REGION: eu-central-1
   AWS_LIGHTSAIL_SERVICE_NAME: franklyapp
 jobs:
-  RunServer:
+  Runtests:
     concurrency: tests
     runs-on: ubuntu-latest
 
