addin nohup for running the dev server

--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -57,7 +57,9 @@ jobs:
         pip install flake8 pytest               
 
     - name: Test with pytest
-      run: |    
+      run: |
+            nohup python developmentserver.py
+            sleep 10s
             pytest
     - name: Lint with flake8
       run: |
