--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -17,6 +17,8 @@ env:
 jobs:
   Runtests:
     runs-on: ubuntu-latest
+      concurrency: 
+    group: tests
     strategy:
       matrix:
         #python-version: [ '2.x', '3.x']
@@ -66,3 +68,17 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+  
+  Bandit-Scan:
+    runs-on: ubuntu-latest
+    concurrency: 
+    group: tests
+    steps:
+    # Checkout the code from GitHub
+      - uses: actions/checkout@v2
+    # Runs a pre configured Bandit scan 
+      - name: Run bandit
+        uses: jpetrucciani/bandit-check@master
+        with:
+        # only scans under this path
+          path: './website'
