--- a/.github/workflows/python-test-app.yml
+++ b/.github/workflows/python-test-app.yml
@@ -15,7 +15,7 @@ env:
   AWS_REGION: eu-central-1
   AWS_LIGHTSAIL_SERVICE_NAME: franklyapp
 jobs:
-  Runtests:
+  pytest:
     runs-on: ubuntu-latest
     concurrency: 
       group: tests
@@ -73,7 +73,7 @@ jobs:
   Bandit-Scan:
     runs-on: ubuntu-latest
     concurrency: 
-      group: tests
+      group: codescan
       cancel-in-progress: true
     steps:
     # Checkout the code from GitHub
@@ -84,3 +84,22 @@ jobs:
         with:
         # only scans under this path
           path: './website'
+
+  security:
+  runs-on: ubuntu-latest
+  concurrency: 
+      group: codescan
+      cancel-in-progress: true
+  steps:
+    - uses: actions/checkout@master
+    - name: Run Snyk to check for vulnerabilities
+      uses: snyk/actions/python@master
+      env:
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      with:
+        args: --severity-threshold=high
+
+  Finishingtests:
+      runs-on: ubuntu-latest
+      needs: codescan
+      needs: tests
